packages/prime-ui/src/components/layout/Layout.css
.logo {
  height: 32px;
  background: rgba(255, 255, 255, 0.2);
  margin: 16px;
}

.ant-layout-sider-children {
  flex-direction: column;
  display: flex;
}

.table-fast-spin .ant-spin-blur {
  filter: none;
  transition: none;
}

.modal-table-picker .ant-modal-footer {
  border-top-width: 0;
}

.with-table-pagination {
  border-bottom-width: 0;
}

.with-table-pagination .ant-table-pagination.ant-pagination {
  margin-bottom: -70px;
  margin-top: 30px;
  margin-right: 16px !important;
}

.tabs-schema .ant-tabs-bar {
  padding: 32px;
  padding-bottom: 0;
  padding-top: 16px;
  margin-bottom: 0;
}

.prime-row-click {
  cursor: pointer;
}

.ant-btn-back {
  color: rgb(170, 170, 170);
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 64px;
  height: 64px;
  margin-left: -50px;
  margin-right: 16px;

  transition: 0.18s ease-in-out;
  transition-property: background-color, color;
}

.ant-btn-back:hover {
  background-color: #f8f8f8;
}

.ant-layout-header.prime__sidebar__header {
  display: flex;
  justify-content: center;
  padding: 0px;
}

.prime__sidebar__logo {
  color: white;
  font-size: 24px;
  font-family: 'system';
  text-decoration: none;
  font-style: italic;
  text-decoration: none !important;
}

.ant-table-filter-dropdown-btns {
  position: relative;
  z-index: 100;
}

.prime__sidebar__logout {
  background: rgba(0, 0, 0, 0.2);
  margin: 0 !important;
  height: 56px;

  display: flex;
  align-items: center;
  justify-content: center;
}
.prime__sidebar__logout > .nav-text {
  margin-top: -4px;
}

.prime__drawer__bottom {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  border-top: 1px solid #e8e8e8;
  padding: 10px 16px;
  text-align: right;
  background-color: #fff;
}

.prime__drawer {
  height: calc(100% - 55px);
  overflow: auto;
  padding-bottom: 53px;
}

.prime__drawer .ant-form-item-label {
  line-height: 36px;
}

.prime__drawer .ant-row.ant-form-item.ant-form-item-with-help {
  margin-bottom: -7px;
}

.prime__drawer .ant-form-item {
  margin-bottom: 12px;
}

.prime__drawer .ant-form {
  margin-bottom: 55px;
}

.prime__drawer .ant-form-explain {
  font-size: 14px;
}

.ant-layout-sider-collapsed .prime__sidebar__logout {
  padding-top: 8px !important;
  height: 40px;
  line-height: 40px;
}

.ant-menu-dark .ant-menu-item.prime__sidebar__logout:hover {
  background: rgba(0, 0, 0, 0.3);
}

.prime__sidebar__toggle {
  position: absolute;
  top: 50%;
  right: 0;
  height: 40px;
  width: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #ffffff8a;
  background-color: rgba(24, 50, 54, 0.86);
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  cursor: pointer;
}

.prime__sidebar__toggle > i {
  transition: transform ease-in-out 0.33s;
  font-size: 14px;
}

.prime__sidebar__spacer {
  flex: 1;
  pointer-events: none;
  opacity: 0;
}

.ant-layout-sider-collapsed .prime__sidebar__toggle > i {
  transform: rotateY(180deg);
}

.prime__sidebar__menu {
  border-right: 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.prime-table .ant-table-tbody > tr:last-child > td {
  border-bottom-width: 0;
}

.prime__sidebar .ant-menu.ant-menu-dark .ant-menu-item-selected,
.prime__sidebar .ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
  background-color: rgba(49, 142, 159, 0.5);
}

.prime__settings__table .ant-row,
.prime__settings__table .ant-form-item,
.prime__settings__table .ant-form-item-with-help {
  margin-bottom: 0 !important;
  padding-bottom: 0 !important;
}

.prime__settings__table .ant-form-explain {
  position: absolute;
  z-index: 100;
  font-size: 13px;
  border: 1px solid;
  top: 35px;
  left: -24px;
  padding: 5px 16px;
  width: 168px;
  border-radius: 4px;
  border-color: #dedede;
  background: #f8f8f8;
}

.prime__settings__table .ant-form-explain:after {
  bottom: 100%;
  left: 50%;
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: rgba(238, 238, 238, 0);
  border-bottom-color: #dedede;
  border-width: 4px;
  margin-left: -4px;
}

.prime__inputnumber {
  -moz-appearance: textfield;
}
.prime__inputnumber::-webkit-inner-spin-button,
.prime__inputnumber::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

